Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19768

[windows] couch_view_group_compactor.exe crashes in exit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • None
    • 4.5.0
    • view-engine
    • Windows server 2012 R2 64-bit
    • Untriaged
    • Windows 64-bit
    • Yes

    Description

      Current tracking:
      couch_view_group_compactor.exe crashes during rebalance while the process is in exit processing. (Made more generic as initially it was observed in upgrade, but same stacks are seen even without mixed mode).

      Originally:
      Rebalance add watson nodes to 2.5.x cluster failed due to {couch_set_view_group,handle_info,\n [{\'DOWN\',#Ref<11467.0.6.28944>

      Run test:
      newupgradetests.MultiNodesUpgradeTests.online_upgrade_rebalance_in_with_ops,initial_version=2.5.2-1154-rel,sasl_buckets=1,standard_buckets=1,items=10000,nodes_init=2,nodes_in=1,nodes_out=1,ddocs-num=1,get-cbcollect-info=True,stop-on-failure=false,skip_init_check_cbserver=true,upgrade_version=4.5.0-2594

      Create 2 nodes cluster in 2.5.2
      Create 3 buckets and 1 doc for each bucket.
      Create a watson 2594 node.
      Add a watson node into 2.5.2 cluster and remove a 2.5.2 node (swap)
      Rebalance. Rebalance failed

      {u'node': u'ns_1@172.23.108.38', u'code': 2, u'text': u'Rebalance exited with reason {unexpected_exit,\n                              {\'EXIT\',<0.3415.5>,\n                               {{error,\n                                 {badrpc,\n                                  {\'EXIT\',\n                                   {{{function_clause,\n                                      [{couch_set_view_group,handle_info,\n                                        [{\'DOWN\',#Ref<11467.0.6.28944>,\n                                          process,<11467.26987.0>,normal},\n                                         {state,\n                                          {"C:/Program Files/Couchbase/Server/var/lib/couchbase/data",\n                                           <<"default">>,\n                                           {set_view_group,\n                                            <<211,186,181,137,176,123,143,57,\n                                              143,57,72,59,46,65,93,7>>,\n                                            nil,<<"default">>,\n                                            <<"_design/upgrade-test-view0">>,\n                                            [],\n                                            [{set_view,0,\n                                              <<"function (doc, meta) {emit(meta.id, \\"emitted_value0\\");}">>,\n                                              undefined,\n                                              {mapreduce_view,\n                                               [<<"upgrade-test-view0">>],\n                                               nil,[],[]}},\n                                             {set_view,1,\n                                              <<"function (doc, meta) {emit(meta.id, \\"emitted_value1\\");}">>,\n                                              undefined,\n                                              {mapreduce_view,\n                                               [<<"upgrade-test-view1">>],\n                                               nil,[],[]}}],\n                                            nil,nil,\n                                            {set_view_index_header,2,0,0,0,0,\n                                             [],nil,[],false,[],nil,[],[]},\n                                            main,nil,nil,nil,[],\n                                            mapreduce_view,".view",prod,\n                                            couch_set_view_stats_prod,0,nil}},\n                                          <11467.19554.0>,\n                                          {set_view_group,\n                                           <<211,186,181,137,176,123,143,57,\n                                             143,57,72,59,46,65,93,7>>,\n                                           <11467.26916.0>,<<"default">>,\n                                           <<"_design/upgrade-test-view0">>,\n                                           [],\n                                           [{set_view,0,\n                                             <<"function (doc, meta) {emit(meta.id, \\"emitted_value0\\");}">>,\n                                             #Ref<11467.0.6.22241>,\n                                             {mapreduce_view,\n                                              [<<"upgrade-test-view0">>],\n                                              {btree,<11467.26916.0>,nil,\n                                               identity,identity,\n                                               #Fun<mapreduce_view.15.80916232>,\n                                               #Fun<mapreduce_view.14.80916232>,\n                                               7168,6144,true},\n                                              [],[]}},\n                                            {set_view,1,\n                                             <<"function (doc, meta) {emit(meta.id, \\"emitted_value1\\");}">>,\n                                             #Ref<11467.0.6.22242>,\n                                             {mapreduce_view,\n                                              [<<"upgrade-test-view1">>],\n                                              {btree,<11467.26916.0>,nil,\n                                               identity,identity,\n                                               #Fun<mapreduce_view.15.80916232>,\n                                               #Fun<mapreduce_view.14.80916232>,\n                                               7168,6144,true},\n                                              [],[]}}],\n                                           {btree,<11467.26916.0>,nil,\n                                            identity,identity,\n                                            #Fun<couch_btree.1.130566675>,\n                                            #Fun<couch_set_view_group.15.38443124>,\n                                            7168,6144,true},\n                                           <11467.26926.0>,\n                                           {set_view_index_header,2,1024,\n                                            179769313486231590772930519078902473361797697894230657273430081157732675805500963132708477322407451858945689105895277501820663686755767817056002259857722151883318793710396731983148400936665652704233451224583306917354742371426459940612103065504496807069751227105848243126376179318353567141359015637596451635200,\n                                            84160890211907387157480046868786433617392948969242358125541952876613613704067185468071078236072206824013752164059970580523127073368114156779805014891277102417435445138526029478147139739489523749114795715943464960,\n                                            0,\n                                            [{688,0},\n                                             {689,0},\n                                             {690,0},\n                                             {691,0},\n                                             {692,0},\n                                             {693,0},\n                                             {694,0},\n                                             {695,0},\n                                             {696,0},\n                                             {697,0},\n                                             {698,0},\n                                             {699,0},\n                                             {700,0},\n                                             {701,0},\n                                             {702,0},\n                                             {703,0},\n                                             {704,0},\n                                             {705,0},\n                                             {706,0},\n                                             {707,0},\n                                             {708,0},\n                                             {709,0},\n                                             {710,0},\n                                             {711,0},\n                                             {712,0},\n                                             {713,0},\n                                             {714,0},\n                                             {715,0},\n                                             {716,0},\n                                             {717,0},\n                                             {718,0},\n                                             {719,0},\n                                             {720,0},\n                                             {721,0},\n                                             {722,0},\n                                             {723,0},\n                                             {724,0},\n                                             {725,0},\n                                             {726,0},\n                                             {727,0},\n                                             {728,0},\n                                             {729,0},\n                                             {730,0},\n                                             {731,0},\n                                             {732,0},\n                                             {733,0},\n                                             {734,0},\n                                             {735,0},\n                                             {736,0},\n                                             {737,0},\n                                             {738,0},\n                                             {739,0},\n                                             {740,0},\n                                             {741,0},\n                                             {742,0},\n                                             {743,0},\n                                             {744,0},\n                                             {745,0},\n                                             {746,0},\n                                             {747,0},\n                                             {748,0},\n                                             {749,0},\n                                             {750,0},\n                                             {751,0},\n                                             {752,0},\n                                             {753,0},\n 
       
       
      "c:/Jenkins/workspace/watson-windows/couchbase/couchdb/src/couch_set_view/src/couch_set_view_group.erl"},\n                                         {line,1048}]},\n                                       {gen_server,handle_msg,5,\n                                        [{file,"gen_server.erl"},{line,604}]},\n                                       {proc_lib,init_p_do_apply,3,\n                                        [{file,"proc_lib.erl"},{line,239}]}]},\n                                     {gen_server,call,\n                                      [<11467.19537.0>,\n                                       {monitor_partition_update,689,\n                                        #Ref<11467.0.6.37887>,<11467.27018.0>},\n                                       infinity]}},\n                                    {gen_server,call,\n                                     [\'capi_set_view_manager-default\',\n                                      {wait_index_updated,689},\n                                      infinity]}}}}},\n                                {gen_server,call,\n                                 [{\'janitor_agent-default\',\n                                   \'ns_1@172.23.108.38\'},\n                                  {if_rebalance,<0.17544.3>,\n                                   {update_vbucket_state,700,active,\n                                    undefined,undefined}},\n                                  infinity]}}}}\n', u'shortText': u'message', u'serverTime': u'2016-05-27T07:16:47.792Z', u'module': u'ns_orchestrator', u'tstamp': 1464358607792, u'type': u'info'}
      [2016-05-27 07:16:52,637] - [rest_client:2530] ERROR - {u'node': u'ns_1@172.23.108.38', u'code': 0, u'text': u'<0.2895.5> exited with {unexpected_exit,\n                        {\'EXIT\',<0.3415.5>,\n                         {{error,\n                           {badrpc,\n                            {\'EXIT\',\n                             {{{function_clause,\n                                [{couch_set_view_group,handle_info,\n                                  [{\'DOWN\',#Ref<11467.0.6.28944>,process,\n                                    <11467.26987.0>,normal},\n                                   {state,\n                                    {"C:/Program Files/Couchbase/Server/var/lib/couchbase/data",\n                                     <<"default">>,\n                                     {set_view_group,\n                                      <<211,186,181,137,176,123,143,57,143,57,\n                                        72,59,46,65,93,7>>,\n                                      nil,<<"default">>,\n                                      <<"_design/upgrade-test-view0">>,[],\n                                      [{set_view,0,\n                                        <<"function (doc, meta) {emit(meta.id, \\"emitted_value0\\");}">>,\n                                        undefined,\n                                        {mapreduce_view,\n                                         [<<"upgrade-test-view0">>],\n                                         nil,[],[]}},\n                                       {set_view,1,\n                                        <<"function (doc, meta) {emit(meta.id, \\"emitted_value1\\");}">>,\n                                        undefined,\n                                        {mapreduce_view,\n                                         [<<"upgrade-test-view1">>],\n                                         nil,[],[]}}],\n                                      nil,nil,\n                                      {set_view_index_header,2,0,0,0,0,[],\n                                       nil,[],false,[],nil,[],[]},\n                                      main,nil,nil,nil,[],mapreduce_view,\n                                      ".view",prod,couch_set_view_stats_prod,\n                                      0,nil}},\n                                    <11467.19554.0>,\n                                    {set_view_group,\n                                     <<211,186,181,137,176,123,143,57,143,57,\n                                       72,59,46,65,93,7>>,\n                                     <11467.26916.0>,<<"default">>,\n                                     <<"_design/upgrade-test-view0">>,[],\n                                     [{set_view,0,\n                                       <<"function (doc, meta) {emit(meta.id, \\"emitted_value0\\");}">>,\n                                       #Ref<11467.0.6.22241>,\n                                       {mapreduce_view,\n                                        [<<"upgrade-test-view0">>],\n                                        {btree,<11467.26916.0>,nil,identity,\n                                         identity,\n                                         #Fun<mapreduce_view.15.80916232>,\n                                         #Fun<mapreduce_view.14.80916232>,\n                                         7168,6144,true},\n                                        [],[]}},\n                                      {set_view,1,\n                                       <<"function (doc, meta) {emit(meta.id, \\"emitted_value1\\");}">>,\n                                       #Ref<11467.0.6.22242>,\n                                       {mapreduce_view,\n                                        [<<"upgrade-test-view1">>],\n                                        {btree,<11467.26916.0>,nil,identity,\n                                         identity,\n                                         #Fun<mapreduce_view.15.80916232>,\n                                         #Fun<mapreduce_view.14.80916232>,\n                                         7168,6144,true},\n                                        [],[]}}],\n                                     {btree,<11467.26916.0>,nil,identity,\n                                      identity,#Fun<couch_btree.1.130566675>,\n                                      #Fun<couch_set_view_group.15.38443124>,\n                                      7168,6144,true},\n                                     <11467.26926.0>,\n                                     {set_view_index_header,2,1024,\n                                      179769313486231590772930519078902473361797697894230657273430081157732675805500963132708477322407451858945689105895277501820663686755767817056002259857722151883318793710396731983148400936665652704233451224583306917354742371426459940612103065504496807069751227105848243126376179318353567141359015637596451635200,\n                                      84160890211907387157480046868786433617392948969242358125541952876613613704067185468071078236072206824013752164059970580523127073368114156779805014891277102417435445138526029478147139739489523749114795715943464960,\n                                      0,\n                                      [{688,0},\n                                       {689,0},\n                                       {690,0},\n                                       {691,0},\n                                       {692,0},\n                                       {693,0},\n                                       {694,0},\n                                       {695,0},\n                                       {696,0},\n                                       {697,0},\n                                       {698,0},\n                                       {699,0},\n                                       {700,0},\n                                       {701,0},\n                                       {702,0},\n                                       {703,0},\n                                       {704,0},\n          
      
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              thuan Thuan Nguyen
              thuan Thuan Nguyen
              Votes:
              0 Vote for this issue
              Watchers:
              16 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty