src/views/bin/couch_view_index_builder.cc
@@ -119,7 +119,7 @@ int main(int argc, char *argv[])
         }
     }
 
-    ret = start_exit_listener(&exit_thread);
+    ret = start_exit_listener(&exit_thread, 1 /*uses_v8*/);
     if (ret) {
         fprintf(stderr, "Error starting stdin exit listener thread\n");
         goto out;
