src/views/bin/util.h
@@ -23,16 +23,8 @@
 
 #include "config.h"
 
-#ifdef __cplusplus
-extern "C" {
-#endif
-
-    /* Start a thread to handle exit message*/
-    int start_exit_listener(cb_thread_t *id);
-    int set_binary_mode(void);
-
-#ifdef __cplusplus
-}
-#endif
+/* Start a thread to handle exit message*/
+int start_exit_listener(cb_thread_t *id, int uses_v8);
+int set_binary_mode(void);
 
 #endif
